Remove Content in Android Development Page

--- a/android_devl.html
+++ b/android_devl.html
@@ -104,7 +104,7 @@
 
 
 
-  <main role="main" data-aos="fade-up">
+  <main role="main">
     <!-- /.container -->
     <div class="jumbotron-intro jumbotron-fluid ">
       <div class="container-intro">
@@ -145,11 +145,11 @@
       <br>
       <br>
       <hr class="my-4">
-      <div id="neon">
+      <!-- <div id="neon">
         <a href="main.html" class="glow">
           Special Discount for early birds!
         </a>
-      </div>
+      </div> -->
 
     </div>
     <div class="jumbotron-and jumbotron-fluid">
